infrastructure/controllers/traefik/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: restricted
  name: traefik
